--- a/static/main.less
+++ b/static/main.less
@@ -150,17 +150,38 @@ div.page.landing {
               background: @baseColor;
               display: inline-block;
               border-radius: 40px 0 0 40px;
-              padding: .2em .4em .2em .5em;
-              border: 0px solid #fff;
+              padding: .15em .35em .15em .55em;
+              border: 3px solid #fff;
               font-size: 65%;
               vertical-align: 10px;
-              box-shadow: 1px 1px 5px #777;
+              //box-shadow: -1px 1px 5px #777;
+              i {
+                vertical-align: -2px;
+              }
+            }
+            .tab-word {
+              display: inline-block;
+              display:none;
+              background: @baseColor;
+              border-radius: 40px 0 0 40px;
+              padding: 0 0 0 .35em;
+              font-size: 90%;
+              border: 0px solid #fff;
+              font-size: 95%;
+              vertical-align: 2px;
+
+              //background: none;
+              //border: 2px solid #fff;
             }
             .and {
               display: none;
             }
             .the {
               display: inline;
+            }
+            .period {
+              display: inline;
+              display: none;
             }
 
           }
