--- a/static/main.css
+++ b/static/main.css
@@ -107,17 +107,34 @@ div.page.landing .screen.top-screen .main-copy div.tagline .above .tab {
   background: #20e168;
   display: inline-block;
   border-radius: 40px 0 0 40px;
-  padding: .2em .4em .2em .5em;
-  border: 0px solid #fff;
+  padding: .15em .35em .15em .55em;
+  border: 3px solid #fff;
   font-size: 65%;
   vertical-align: 10px;
-  box-shadow: 1px 1px 5px #777;
+}
+div.page.landing .screen.top-screen .main-copy div.tagline .above .tab i {
+  vertical-align: -2px;
+}
+div.page.landing .screen.top-screen .main-copy div.tagline .above .tab-word {
+  display: inline-block;
+  display: none;
+  background: #20e168;
+  border-radius: 40px 0 0 40px;
+  padding: 0 0 0 .35em;
+  font-size: 90%;
+  border: 0px solid #fff;
+  font-size: 95%;
+  vertical-align: 2px;
 }
 div.page.landing .screen.top-screen .main-copy div.tagline .above .and {
   display: none;
 }
 div.page.landing .screen.top-screen .main-copy div.tagline .above .the {
   display: inline;
+}
+div.page.landing .screen.top-screen .main-copy div.tagline .above .period {
+  display: inline;
+  display: none;
 }
 div.page.landing .screen.top-screen .main-copy div.tagline .under {
   white-space: nowrap;
