--- a/static/main.less
+++ b/static/main.less
@@ -99,7 +99,7 @@ div.page.landing {
         right: 0;
         color: #fff;
         #logo {
-          width: 200px;
+          width: 250px;
           float: left;
           margin-top: 0px;
         }
@@ -199,7 +199,7 @@ div.page.landing {
         div.about {
           color: #fff;
           margin-top: 30px;
-          margin-bottom: 100px;
+          margin-bottom: 80px;
           font-size: 23px;
           @media @xs {
             //font-size: 16px;
@@ -207,6 +207,7 @@ div.page.landing {
         }
 
         .call-to-action-buttons {
+          margin-left: -10px;
           display: flex;
           justify-content: space-between;
           @media @xs {
@@ -218,7 +219,7 @@ div.page.landing {
 
           a.main-button {
             padding: 15px 30px;
-            border-radius: 80px ;
+            border-radius: 50px ;
 
             border: 2px solid #fff;
             color: #fff;
@@ -229,8 +230,7 @@ div.page.landing {
             justify-content: center;
             transition: all 0.15s ease;
 
-            //background: #fff;
-            //color: @contrast;
+            //background: navy;
 
             &:hover {
               text-decoration: none;
@@ -251,8 +251,9 @@ div.page.landing {
               display: block;
               font-size: 20px;
               .action {
-                font-size: 16px;
-                font-weight: 300;
+                font-size: 14px;
+                margin-bottom: 2px;
+                //font-weight: 300;
                 display:block;
               }
               .browser {
@@ -300,7 +301,7 @@ div.page.landing {
   dl {
     dt {
       color: @baseColor;
-      font-size: 28px;
+      font-size: 24px;
       margin: 40px 0 5px;
       font-weight: normal;
     }
