--- a/static/main.less
+++ b/static/main.less
@@ -300,10 +300,16 @@ div.page.landing {
   }
   dl {
     dt {
-      color: @baseColor;
-      font-size: 24px;
-      margin: 40px 0 5px;
-      font-weight: normal;
+      font-size: 20px;
+      margin: 45px 0 5px;
+      font-weight: bold;
+      i {
+        font-size: 70%;
+        margin-right: 3px;
+        vertical-align: 2px;
+        display: none;
+
+      }
     }
     dd {
       margin: 0;
