--- a/static/main.less
+++ b/static/main.less
@@ -99,7 +99,7 @@ div.page.landing {
         right: 0;
         color: #fff;
         #logo {
-          width: 250px;
+          //width: 250px;
           float: left;
           margin-top: 0px;
         }
