--- a/static/main.less
+++ b/static/main.less
@@ -93,6 +93,13 @@ body {
   padding-top: 100px;
   line-height: 1.4;
   font-size: 20px;
+  min-height: 100vm;
+  a.eg {
+    font-size: 130%;
+  }
+  .ps {
+    margin-top: 50px;
+  }
 }
 
 
@@ -177,19 +184,18 @@ div.page.landing {
               border: 3px solid #fff;
               font-size: 65%;
               vertical-align: 10px;
-              //box-shadow: -1px 1px 5px #777;
+              display:none;
               i {
                 vertical-align: -2px;
               }
             }
             .tab-word {
               display: inline-block;
-              display:none;
               background: @baseColor;
               border-radius: 40px 0 0 40px;
               padding: 0 0 0 .35em;
               font-size: 90%;
-              border: 0px solid #fff;
+              border: 2px solid #fff;
               font-size: 95%;
               vertical-align: 2px;
 
