--- a/static/main.less
+++ b/static/main.less
@@ -317,9 +317,21 @@ div.page.landing {
       justify-content: center;
       padding: 0px 0 10px;
       font-size: 14px;
-      a {
+      .links {
+        a {
+          color: #fff;
+          padding: 10px;
+        }
+      }
+      .spacer {
+        width: 50px;
+      }
+      div.by {
         color: #fff;
         padding: 10px;
+        a {
+          color: #fff;
+        }
       }
 
     }
