add google verification tag.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title ng-bind-html="pageTitle()">UnPaywall</title>
     <meta name="viewport" content="initial-scale=1" />
+    <meta name="google-site-verification" content="9ZfLncZ21UQ_fujN92zThG86oGRlFQaXzEllfP59xqI" />
+
 
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
