--- a/static/main.less
+++ b/static/main.less
@@ -235,68 +235,14 @@ div.page.landing {
           }
         }
 
-        .call-to-action-buttons {
+        .cta {
           margin-left: -10px;
           display: flex;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-
-          a.main-button {
-            @media @xs {
-              font-size: 24px;
-              padding: 10px 15px;
-            }
-            padding: 15px 30px;
-            border-radius: 50px ;
-            font-weight: 300;
-
-            border: 3px solid #fff;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            line-height: 0.8;
-            text-align: left;
-            justify-content: center;
-            transition: all 0.15s ease;
-            font-size: 32px;
-
-            //background: navy;
-
-            &:hover {
-              text-decoration: none;
-              transform: scale(1.03125);
-            }
-
-            .icon {
-              margin-right: 15px;
-              display:block;
-              i {
-                font-size: 55px;
-              }
-            }
-            span.big {
-              display: block;
-            }
-            span.small {
-              font-size: 14px;
-              font-weight: normal;
-            }
-
-          }
         }
-        a.small-button {
-          color: #fff;
-          display:inline;
-          margin-top: 15px;
-          &:hover {
-            text-decoration: none;
-          }
-          i {
-            margin-right: 3px;
-          }
 
-        }
 
 
 
