--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,9 @@
 
 
 
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/iplffkdpngmdjhlpjmppncnlhomiipha">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
-
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc4/angular-material.min.css">
-
     <link href="/static/main.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="/static/img/favicon.png" />
 
